[package]
name = "twine"
version = "0.3.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IMI-eRnD-Be/twine"
homepage = "https://github.com/IMI-eRnD-Be/twine"
documentation = "https://docs.rs/twine"
exclude = ["/.gitignore", "/.github"]
keywords = ["twine", "ini", "internationalization"]
categories = ["internationalization"]
description = "Library for internationalization using the Twine file format"

[dependencies]
indenter = { version = "0.3", features = ["std"] }
heck = "0.3"
regex = "1"
serde = { version = "1", optional = true }
