[package]
name = "twine-demo"
version = "0.1.0"
authors = ["Ralf Zerres <ralf.zerres@networkx.de>"]
edition = "2018"
build = "build.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
substring = "1.4.5"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
twine = { version = "^0.3", features = ["serde"] }

[build-dependencies]
twine = { version = "^0.3", features = ["serde"] }

[[bin]]
name = "twine-demo"
path = "src/main.rs"
