[package]
name = "twine-test"
version = "0.1.0"
authors = ["Ralf Zerres <ralf.zerres@networkx.de>"]
edition = "2018"
build = "build.rs"

[dependencies]
substring = "1.4.5"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

[build-dependencies]
twine = "0.3.8"

[[bin]]
name = "twine-test"
path = "src/main.rs"
