[package]
name = "test-crate"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
twine = { path = "../..", features = ["serde"] }

[dependencies]
serde = { version = "1" }
serde_json = "1"

[workspace]
